# openvario-shell

./: .coveralls.yml  .gitignore  .travis.yml  CHANGES.md  HACKING.md  MANIFEST.in  Makefile  Pipfile  README.md  pyproject.toml  sample.env  setup.cfg  setup.py
.circleci/: config.yml
rootfs-ref/: README.md
rootfs-ref/dev/: sim.nmea
rootfs-ref/etc/: os-release
scripts/: openvario-shell-install.sh  openvario-shell-uninstall.sh
src/ovcore/: __init__.py  ext.py
src/ovshell/: __init__.py  api.py  app.py  device.py  main.py  ovos.py  process.py  screen.py  settings.py  testing.py  widget.py
src/ovshell/ext/core/: __init__.py
src/ovshell/protocol/: __init__.py
src/ovshell/ui/: apps.py  mainmenu.py  settings.py
src/ovshell_connman/: __init__.py  agent.py  agentiface.py  api.py  app.py  connman.py  dbusiface.py  ext.py  indicator.py  manager.py  model.py
src/ovshell_core/: __init__.py  aboutapp.py  devindicators.py  devsim.py  ext.py  gpstime.py  opkg.py  rotation.py  serial.py  settings.py  setupapp.py  sysinfo.py  upgradeapp.py
src/ovshell_fileman/: __init__.py  api.py  backupapp.py  downloadapp.py  downloader.py  ext.py  mountwatch.py  rsync.py  usbcurtain.py  utils.py
src/ovshell_google/: __init__.py  api.py  credentials.py  ext.py  mailapp.py  oauth2.py
src/ovshell_xcsoar/: __init__.py  ext.py
tests/: conftest.py  test_main.py  test_settings.py
tests/fixtures/: urwid.py
tests/ovshell/: test_device.py  test_screen.py  test_settings.py
tests/ovshell/ui/: test_mainmenu.py
tests/ovshell_connman_tests/: stubs.py  test_agent.py  test_agentiface.py  test_app.py  test_indicator.py  test_manager.py
tests/ovshell_core/: test_core_ext.py  test_devindicators.py  test_devsim.py  test_gpstime.py  test_serial.py  test_upgradeapp.py
tests/ovshell_core/samples/: sample.nmea
tests/ovshell_core_tests/: test_aboutapp.py  test_core_ext.py  test_devindicators.py  test_devsim.py  test_gpstime.py  test_opkg.py  test_serial.py  test_setupapp.py  test_sysinfo.py  test_upgradeapp.py
tests/ovshell_fileman/: stubs.py  test_backupapp.py  test_downloadapp.py  test_downloader.py  test_fileman_ext.py  test_rsync.py
tests/ovshell_fileman_tests/: stubs.py  test_backupapp.py  test_downloadapp.py  test_downloader.py  test_fileman_ext.py  test_mountwatch.py  test_rsync.py  test_utils.py
tests/ovshell_tests/: test_device.py  test_screen.py
tests/ovshell_tests/ui/: test_mainmenu.py
tests/ovshell_xcsoar/: test_ext.py
tests/ovshell_xcsoar_tests/: test_xcsoar_ext.py
