[metadata]
name = openvario-shell
version = 0.7.9.dev0
description = Main Menu Shell for OpenVario
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kedder/openvario-shell
author = Andrey Lebedev
author_email = andrey.lebedev@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords = openvario tui menu shell
project_urls =
   

[options]
package_dir = =src
packages = find:
python_requires = >=3.7, <4
install_requires =
    urwid
    dbus-next
    pyserial
    pyserial-asyncio
    typing-extensions
data_files =
   

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ovshell=ovshell.main:main
ovshell.extensions =
    core=ovshell_core:extension
    xcsoar=ovshell_xcsoar:extension
    fileman=ovshell_fileman:extension
    connman=ovshell_connman:extension

[options.extras_require]
dev =
    black
    mypy
test =
    pytest
    pytest-coverage
    pytest-asyncio
    pytest-mock

[options.package_data]
ovshell =
    py.typed

[mypy]
ignore_missing_imports = True

[pycodestyle]
ignore = E501, W503

[pep8]
ignore = E501

[isort]
profile = black
multi_line_output = 9

[check-manifest]
ignore =
    sample.env
    .coveralls.yml
    Makefile
    Pipfile*
    .circleci/*
    scripts/*
    screenshots/*
    rootfs-ref/**

[tool:pytest]
asyncio_mode = auto

[flake8]
max-line-length = 88
